# Local_Rag_Assistant

./: .gitignore  README.md  local_rag.py  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: chat_store.py  cli.py  config.py  desktop_server.py  main.py  project_store.py
app/rag/: answer_cleaner.py  answer_service.py  ask_jobs.py  chat_context.py  document_index.py  document_jobs.py  document_loader.py  index_profile.py  ingest_service.py  job_registry.py  model_profiles.py  model_pull.py  ocr_service.py  ollama_client.py  prompt_builder.py  query_rewriter.py  retrieval_settings.py  retriever.py  source_quality.py  splitter.py  sync_service.py  vector_db.py
frontend/: index.html  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: test_chat_store.py  test_document_index.py  test_document_loader.py  test_index_profile.py  test_job_registry.py  test_project_store.py  test_rag_core.py
tools/: build_launcher.ps1  build_tauri_app.ps1  create_desktop_shortcut.ps1  generate_tauri_icons.ps1  local_rag_launcher.py  prepare_tauri_runtime.ps1  run_tauri_dev.ps1
