[package]
name = "local-rag-assistant-desktop"
version = "0.1.1"
description = "Desktop shell for Local RAG Assistant"
authors = ["starter25"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde_json = "1"
tauri = { version = "2", features = [] }
ureq = "2"
